--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.8)
 project(ASM)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 
-set(SOURCE_FILES main.cpp memcpy.h)
+set(SOURCE_FILES main.cpp memcpy.h counter.h)
+set(TRAMP trampoline.cpp)
+
 add_executable(ASM ${SOURCE_FILES} main.cpp)
+add_executable(asm3_trampoline ${TRAMP} trampoline.cpp)
